# Computer-Architecture

./: .gitignore  README.md
1-Lab/: .gitignore  counter.circ  lfsr.circ  Исаев_Максим_36_1.docx
2-Lab/: .gitignore  analytic.py  cache.sv  cpu.sv  dump_cache.vcd  hitCount.py  lineReadRun.cmd  mem.sv  miss  run.cmd  testBenchRun.cmd  testbench.sv
2-Lab/1/: cache.out  direct_mapping_cache.sv  ram.sv  testbench.sv
2-Lab/analytic/: hitCount.py
2-Lab/example/: README.md  (+3 more)
3-Lab/: .gitignore  CMakeLists.txt  ElfParser.cpp  ElfParser.h  InscructionProperties.h  InstProps.h  Instruction.cpp  Instruction.h  InstructionFabric.h  MnemonicsStorage.h  README.MD  Storage.cpp  Storage.h  SymTabInfoEnum.h  Type.h  instructionsSet.h  main.cpp  merged.txt  parseFuncs.h
3-Lab/Instructions/: BType.h  CMakeLists.txt  EType.h  IAddrType.cpp  IAddrType.h  IType.cpp  IType.h  JType.h  RType.cpp  RType.h  SType.cpp  SType.h  UType.h  UnknownType.h  merged.txt
3-Lab/Monitor/: .gitignore
3-Lab/Structs/: AbstractStruct.h  CMakeLists.txt  ElfHeader.h  ProgrammHeader.h  SectionHeader.h  SymTabEntry.h  merged.txt  typedef.h
3-Lab/Types/: BType.cpp  BType.h  CMakeLists.txt  IAddrType.h  IType.h  JType.h  RType.h  SType.h  UType.h  UnknownType.h
3-Lab/resources/: newOut.s  out.elf  out.s  test.cpp  test_elf  test_elf.out
3-Lab/scripts/: asm.cmd  asm.ps1  disasm.cmd  disasm.ps1  moveElfFIleToBuild.ps1  update.cmd  update.ps1
4-Lab/: .gitignore  4-Lab.sln  4-Lab.vcxproj  4-Lab.vcxproj.filters  PnmImage.cpp  PnmImage.h  README.MD  fakeP5.pgm  hard.cpp  otsuFuncs.cpp  otsuFuncs.h  test.h
(+32 files in other folders)
